# py-math-lib

./: .gitignore  .releaserc.json  CHANGELOG.md  Jenkinsfile  README.md  pyproject.toml  setup.py
src/py_math_lib/: __init__.py  math_operations.py
tests/: __init__.py  test_math_operations.py
